[package]
name = "seres"
version = "0.0.1"
edition = "2021"
license = "MIT"
authors = ["Sino Team <sino@sino.dev>"]
description = ""
homepage = "https://github.com/sino-lang/seres"
repository = "https://github.com/sino-lang/seres"
keywords = ["cli", "seres"]
categories = ["command-line-utilities"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.7", features = ["derive"] }
